<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    android:padding="@dimen/common_size_default"
    tools:context=".Activities.NoteDetailsActivity">


    <TextView
        android:id="@+id/tvNoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_default"
        android:layout_marginStart="@dimen/common_size_min"
        android:text="@string/add_new_note_message"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/saveNote"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/common_size_min"
        android:src="@drawable/done_24"
        app:tint="@color/white"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvNoteTitle"
        android:contentDescription="@string/image_save_message" />

    <LinearLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/common_size_default"
        android:padding="@dimen/common_size_default"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corner"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteTitle">

        <EditText
            android:id="@+id/etNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/common_size_min"
            android:padding="@dimen/common_size_min"
            android:hint="@string/title_message"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:autofillHints="Note title "
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/etNoteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/common_size_min"
            android:autofillHints="Content"
            android:gravity="top"
            android:hint="@string/content_message"
            android:inputType="textPersonName"
            android:minLines="15"
            android:padding="@dimen/common_size_min"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>